# ARGO_Vision_CODEMOTION_2025

./: README.md  gitignore  pyproject.toml
codemotion2025/assets/: fg_classifier.pkl
codemotion2025/utils/: dinov3_utils.py  sam_utils.py  utils.py
notebooks/: 2_clip_model.ipynb  3_sam2.ipynb  4_dinov3_pca.ipynb  ClipModel_PromptEng.ipynb  dinov3_dinotxt_inference.ipynb  dinov3_foreground_segmentation.ipynb  dinov3_pca.ipynb  sam2.ipynb  sam2_SeaObjects_MultiPartObject.ipynb  self_attention.ipynb  training_free_detection.ipynb
utils/utils/: download_image.py
