[project]
name = "CODEMOTION_2025"
version = "0.1.0"
description = "Excercise for codemotion 2025"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface>=0.0.1",
    "huggingface-hub>=0.29.2",
    "jupyterlab",
    "opencv-python",
    "pandas>=2.2.3",
    "sam-2[notebooks]",
    "torch",
    "tqdm",
    "matplotlib",
    "ipympl",
    "ipywidgets",
    "ipyevents",
    'torchvision',
    "Pillow",
    "scikit-learn",
    "transformers",
    "timm",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "torchmetrics",
    "termcolor"
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]          # trova i pacchetti sotto src/
include = ["codemotion_2025*"]

[tool.setuptools]
include-package-data = true
