[project]
name = "CODEMOTION_2025"
version = "0.1.0"
description = "Excercise for codemotion 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"huggingface-hub>=0.29.2",
    #"jupyterlab",
    #"opencv-python",
    #"pandas>=2.2.3",

    # >>> sostituisci questa riga:
    # "sam-2[notebooks]",
    # >>> con questa (forma PEP 508 valida per pip):
    # "sam-2[notebooks] @ git+https://github.com/facebookresearch/sam2.git",

    #"torch",
    "tqdm",
    #"matplotlib",
    #"ipympl",
    #"ipywidgets",
    #"ipyevents",
    #"torchvision",
    #"Pillow",
    "scikit-learn",
    #"transformers",
    #"timm",
    #"segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    #"torchmetrics",
    "termcolor"
]

# Questa sezione uv puoi tenerla, ma sappi che pip la ignora.
[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codemotion2025*"]

[tool.setuptools]
#packages = ["codemotion2025"]
include-package-data = true